--- a/brandProject.html
+++ b/brandProject.html
@@ -83,7 +83,7 @@
 	<!-- 留言与返回顶部模块 -->
 	<div class="message-return">
 		<a href="#message-consultation" class="message-icon">
-			<img src="images/message.png" alt="留言" />
+			<img src="images/message_01.png" alt="留言" />
 		</a>
 		<a href="javascript:;" class="return-icon">
 			<img src="images/return_top.png" alt="返回顶部" />
