壹杯加咖啡终极版

--- a/brandProject.html
+++ b/brandProject.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="css/joinInformation.css">
 	<link rel="stylesheet" href="css/joinUs.css">
 	<link rel="stylesheet" href="css/message.css">
-	<script src="js/header.js"></script>
 </head>
 <body>
 	<!-- 品牌项目详细内容模块 -->
@@ -90,6 +89,7 @@
 		</a>
 	</div>
 	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/head.js"></script>
 	<script src="js/script.js"></script>
 	<script>
 		$(document).ready(function(){
