--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/joinInformation.css">
 	<link rel="stylesheet" href="css/joinUs.css">
 	<link rel="stylesheet" href="css/message.css">
-	<script src="js/header.js"></script>
+	
 </head>
 <body>
 	<!-- 壹杯加咖啡主页 -->
@@ -244,6 +244,7 @@
 		</a>
 	</div>
 	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/head.js"></script>
 	<script src="js/script.js"></script>
 	<script>
 		$(document).ready(function(){
