--- a/joinInformation.html
+++ b/joinInformation.html
@@ -14,7 +14,6 @@
 	<link rel="stylesheet" href="css/joinInformation.css">
 	<link rel="stylesheet" href="css/joinUs.css">
 	<link rel="stylesheet" href="css/message.css">
-	<script src="js/header.js"></script>
 </head>
 <body>
 	<!-- 加盟资讯内容详情模块 -->
@@ -144,14 +143,15 @@
 		</a>
 	</div>
 	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/head.js"></script>
 	<script src="js/script.js"></script>
 	<script>
 		$(document).ready(function(){
 			$('.menu-level .menu-level-list:nth-child(5)')
-			.find('.menu-level2').slideToggle("fast")
-			.parent()
-			.siblings()
-			.find('.menu-level2').slideUp("fast");
+				.find('.menu-level2').slideToggle("fast")
+				.parent()
+				.siblings()
+				.find('.menu-level2').slideUp("fast");
 		})
 	</script>
 </body>
