--- a/message.html
+++ b/message.html
@@ -14,7 +14,6 @@
 	<link rel="stylesheet" href="css/joinInformation.css">
 	<link rel="stylesheet" href="css/joinUs.css">
 	<link rel="stylesheet" href="css/message.css">
-	<script src="js/header.js"></script>
 </head>
 <body>
 	<!-- 留言咨询内容详情模块 -->
@@ -43,6 +42,7 @@
 		</div>
 	</div>
 	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/head.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
