--- a/aboutBrand.html
+++ b/aboutBrand.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="css/basic.css">
 	<link rel="stylesheet" href="css/head.css">
 	<link rel="stylesheet" href="css/aboutBrand.css">
-	<script src="js/header.js"></script>
 </head>
 <body>
 	<!-- 关于品牌详细内容模块 -->
@@ -57,6 +56,7 @@
 		</a>
 	</div>
 	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/head.js"></script>
 	<script src="js/script.js"></script>
 	<script>
 		$(document).ready(function(){
