--- a/joinUs.html
+++ b/joinUs.html
@@ -14,7 +14,6 @@
 	<link rel="stylesheet" href="css/joinInformation.css">
 	<link rel="stylesheet" href="css/joinUs.css">
 	<link rel="stylesheet" href="css/message.css">
-	<script src="js/header.js"></script>
 </head>
 <body>
 	<!-- 加入我们内容详情模块 -->
@@ -79,6 +78,7 @@
 		</a>
 	</div>
 	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/head.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
