--- a/joinUs.html
+++ b/joinUs.html
@@ -7,13 +7,7 @@
 	<link rel="icon" href="images/one_icon.png" type="image/png">
 	<link rel="stylesheet" href="css/basic.css">
 	<link rel="stylesheet" href="css/head.css">
-	<link rel="stylesheet" href="css/home.css">
-	<link rel="stylesheet" href="css/aboutBrand.css">
-	<link rel="stylesheet" href="css/brandProject.css">
-	<link rel="stylesheet" href="css/storeImage.css">
-	<link rel="stylesheet" href="css/joinInformation.css">
 	<link rel="stylesheet" href="css/joinUs.css">
-	<link rel="stylesheet" href="css/message.css">
 </head>
 <body>
 	<!-- 加入我们内容详情模块 -->
@@ -69,16 +63,17 @@
 		</div>
 	</div>
 	<!-- 留言与返回顶部模块 -->
-	<div class="message-return">
+	<!-- <div class="message-return">
 		<a href="message.html" class="message-icon">
 			<img src="images/message_01.png" alt="留言" />
 		</a>
 		<a href="javascript:;" class="return-icon">
 			<img src="images/return_top.png" alt="返回顶部" />
 		</a>
-	</div>
+	</div> -->
 	<script src="js/jquery-3.1.1.js"></script>
 	<script src="js/head.js"></script>
+	<script src="js/msgTop.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
