--- a/aboutBrand.html
+++ b/aboutBrand.html
@@ -47,16 +47,17 @@
 		</div>
 	</div>
 	<!-- 留言与返回顶部模块 -->
-	<div class="message-return">
-		<a href="#message-consultation" class="message-icon">
+	<!-- <div class="message-return">
+		<a href="message.html" class="message-icon">
 			<img src="images/message_01.png" alt="留言" />
 		</a>
 		<a href="javascript:;" class="return-icon">
 			<img src="images/return_top.png" alt="返回顶部" />
 		</a>
-	</div>
+	</div> -->
 	<script src="js/jquery-3.1.1.js"></script>
 	<script src="js/head.js"></script>
+	<script src="js/msgTop.js"></script>
 	<script src="js/script.js"></script>
 	<script>
 		$(document).ready(function(){
