页面scrollTop的优化

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			},false);
 
 			rotation.addEventListener('touchmove',function(e){
-				// e.preventDefault();
+				e.preventDefault();
 				var touch = e.targetTouches[0];
 				var _l = $('.rotation-big').position().left + touch.pageX - m_startX;
 				m_startX = touch.pageX;
